--- a/css/style.css
+++ b/css/style.css
@@ -105,13 +105,18 @@
     color: #fff;
 }
 
-#home .content h1 {
-    font-size: 60px;
+#home .content h2 {
+    font-size: 55px;
     margin-bottom: 60px;
 }
 
-#home .content h1::after {
-    content: 'Bharath Kumar';
+#home h1 {
+    font-size: 60px;
+    margin-bottom: 20px;
+}
+
+#home .content h2::after {
+    content: 'A Developer';
     animation: textanim 10s linear infinite;
 }
 
